--- a/movies_java_sxy/.classpath
+++ b/movies_java_sxy/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
@@ -13,5 +14,8 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/web.xml"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/fastjson-1.2.62.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/mysql-connector-java-5.1.38-bin.jar" sourcepath="E:/大三上学期/软件工程/Movies/movies_java_sxy/WebContent/WEB-INF/mysql-connector-java-5.1.38-bin.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
