--- a/movies_java_sxy/.classpath
+++ b/movies_java_sxy/.classpath
@@ -14,8 +14,9 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/web.xml"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/fastjson-1.2.62.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/mysql-connector-java-5.1.38-bin.jar" sourcepath="E:/大三上学期/软件工程/Movies/movies_java_sxy/WebContent/WEB-INF/mysql-connector-java-5.1.38-bin.jar"/>
+	<classpathentry kind="lib" path="WebContent/META-INF/context.xml"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/classes/Dbdao.class"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
