--- a/movies_java_sxy/.settings/org.eclipse.core.resources.prefs
+++ b/movies_java_sxy/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,7 @@
 eclipse.preferences.version=1
+encoding//WebContent/1.jsp=UTF-8
 encoding//WebContent/NewFile2.jsp=UTF-8
 encoding//WebContent/denglu.jsp=UTF-8
 encoding//WebContent/index.jsp=UTF-8
+encoding//src/dao/Dbdao.java=UTF-8
+encoding/<project>=UTF-8
