--- a/movies_java_sxy/.settings/org.eclipse.core.resources.prefs
+++ b/movies_java_sxy/.settings/org.eclipse.core.resources.prefs
@@ -4,5 +4,7 @@ encoding//WebContent/NewFile2.jsp=UTF-8
 encoding//WebContent/denglu.jsp=UTF-8
 encoding//WebContent/index.css=UTF-8
 encoding//WebContent/index.jsp=UTF-8
+encoding//WebContent/search.jsp=UTF-8
+encoding//WebContent/sign_in.jsp=UTF-8
 encoding//src/dao/Dbdao.java=UTF-8
 encoding/<project>=UTF-8
